--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
 <title>IHC</title>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+<link rel="stylesheet" href="css/responsive.css">
+
+<link rel="icon" href="images/fevicon.png" type="image/gif" />
+
+<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
+<link rel="stylesheet" href="css/owl.carousel.min.css">
+<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 </head>
 <body>
 
