--- a/prototipacao.html
+++ b/prototipacao.html
@@ -40,31 +40,30 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">HOME</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="usabilidade.html">Usabilidade</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="comunicabilidade.html">Comunicabilidade</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="acessibilidade.html">Acessibilidade</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="prototipacao.html">Prototipação</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="experiencia.html">Experiência de Usuário</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="design.html">Design</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="interatividade.html">Interatividade</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="usabilidade.html">Usabilidade</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="comunicabilidade.html">Comunicabilidade</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="acessibilidade.html">Acessibilidade</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="prototipacao.html">Prototipação</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="experiencia.html">Experiência de Usuário</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="design.html">Design</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="interatividade.html">Interatividade</a>
+        </li>
 
 
         </ul>
@@ -80,7 +79,7 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-md-6">
-                <h1 class="controller_text">Prototipação</h1>
+                <h1 class="video_text">Prototipação</h1>
                 <p class="banner_text">A prototipação é uma forma de visualizar a sua ideia antes mesmo de tirá-la do papel. Ela é de extrema importância para startups, uma vez que evita maiores gastos no desenvolvimento.
                   Então a prototipação busca simular a experiência do usuário com a solução final e mostrar como serão as funcionalidades. É a tangibilização da ideia!
                   O principal benefício de prototipar é, justamente, permitir ver a ideia no papel, tirando ela do mundo abstrato e jogando para o mundo material. Seu objetivo é validar os requisitos do usuário.
